...
  bool _senhaVisivel = false;
  bool _entrando = false;

  @override
  void initState() {
    super.initState();
    // Reavalia se o botao "Entrar" pode ser liberado a cada letra digitada.
    _email.addListener(_redesenhar);
    _senha.addListener(_redesenhar);
  }

  void _redesenhar() => setState(() {});

...
